--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body {
     margin-left: 2rem;
 }
 
+.list {
+    display: none;
+}
 .page-links {
     display: flex;
     list-style: none;
@@ -69,7 +72,11 @@ body {
     justify-content: center;
     display: flex;
     position: relative;
-    margin: 3em;
+    margin: 3rem;
+}
+
+.image img {
+    width: 100%;
 }
 
 .image i {
@@ -118,6 +125,7 @@ body {
     margin-left: 5rem;
     margin-top: 3rem;
     clear: left;
+    height: 60vh;
 }
 
 .column img {
@@ -139,7 +147,7 @@ body {
 }
 
 .ceo img {
-    width: 450px;
+    width: 100%
 }
 
 .quote {
@@ -182,12 +190,16 @@ body {
     padding-top: 5rem;
 }
 
-.job h3, p {
+.job h3, .job p {
     padding-left: 2rem;
 }
 
 .job .fa-3x {
     color: red;
+    float: right;
+    display: block;
+    padding-right: 2rem;
+    padding-bottom: 3rem;
 }
 .view-btn {
     justify-content: center;
@@ -198,23 +210,137 @@ body {
 }
 
 .btn-end {
-padding: 10px 15px;
-color: white;
-background-color: #1A6AE2;
-border: none;
-border-radius: 5px;
+    padding: 10px 15px;
+    color: white;
+    background-color: #1A6AE2;
+    border: none;
+    border-radius: 5px;
 }
 
-@media(max-width:768px){
+footer {
+    background-color: #496693;
+    height: 400px;
+    margin-top: 2rem;
+}
+
+.footer{
+    display: flex;
+    
+}
+
+.media-text {
+    display: flex;
+}
+
+ul {
+    list-style: none;
+}
+
+.about, .portfolio, .consultancy, .contact {
+    margin-left: 6rem;
+    margin-top: 7rem;
+    color: white;
+
+}
+
+
+#media {
+    display: flex;
+}
+
+.media {
+    margin-left: 5rem;
+    margin-top: 7rem;
+}
+
+.fa-brands {
+    margin-left: 1rem;
+}
+
+
+
+
+
+@media(max-width:992px){
 
     .column{
         width: 50%;
     }
 
-    .founder-box {
-        margin: 0;
+    .pages {
+        display: none;
     }
 
+    .about, .portfolio, .consultancy, .contact {
+        margin-left: 5rem;
+        margin-top: 7rem;
+        color: white;
+    
+    }
+
+    .footer {
+        flex-direction: column;
+    }
+
+    .media {
+        margin-left: 20rem;
+        margin-top: 2rem;
+    }
+}
+
+
+
+@media(max-width:768px){
+
+    .column{
+        width: 100%;
+    }
+
+    .registr{
+        display: none;
+    }
+
+    .list {
+        display: block;
+        margin-right: 3rem;
+    }
+
+    .content h1{
+        margin-top: 5rem;
+        font-size: 1.5rem;
+    }
+
+    .content p {
+        font-size: .9rem;
+        color: black;
+        line-height: 1.5rem;
+    }
+    
+    .column {
+        justify-content: center;
+        padding: 2rem 2rem;
+    }
+
+    .row {
+        margin-left: 0;
+    }
+
+    .founder-box {
+        flex-direction: column;
+    }
+
+    .about, .portfolio, .consultancy, .contact {
+        margin-left: .5rem;
+        margin-top: 7rem;
+        color: white;
+        font-size: .75rem;
+    
+    }
+
+    .media {
+        margin-left: 5rem;
+        margin-top: 1rem;
+    }
 }
 
 
